fix(base.less): image viewer full height on iOS

--- a/src/base.less
+++ b/src/base.less
@@ -303,7 +303,7 @@ nav {
 
 	.image {
 		display: inline-block;
-		height: 100vh;
+		height: 100%;
 		width: 100vw;
 		border: 20px solid transparent;
 		background-size: contain;
